<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>${groupId}</groupId>
    <artifactId>${artifactId}</artifactId>
    <version>${version}</version>
    <name>${artifactId}</name>
    <organization>
        <name>My Company</name>
        <url>http://www.company.com</url>
    </organization>
    <inceptionYear>2016</inceptionYear>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <serviceName>${serviceName}</serviceName>
        <mainClass>${package}.${serviceName}.ServerStarter</mainClass>
        <dvalin.version>INSERT DVALIN VERSION</dvalin.version>
    </properties>
    <prerequisites>
        <maven>3.0.0</maven>
    </prerequisites>
    <scm>
        <connection></connection>
        <developerConnection></developerConnection>
    </scm>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>de.taimos</groupId>
                <artifactId>dvalin-parent</artifactId>
                <version>${dvalin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <!-- Dvalin dependencies -->
        <dependency>
            <groupId>de.taimos</groupId>
            <artifactId>dvalin-daemon</artifactId>
            <version>${dvalin.version}</version>
        </dependency>
        <!--<dependency>
            <groupId>de.taimos</groupId>
            <artifactId>dvalin-jaxrs</artifactId>
            <version>${dvalin.version}</version>
        </dependency>-->
        <!--<dependency>
            <groupId>de.taimos</groupId>
            <artifactId>dvalin-mongodb</artifactId>
            <version>${dvalin.version}</version>
        </dependency>-->
        <!--<dependency>
            <groupId>de.taimos</groupId>
            <artifactId>dvalin-jpa</artifactId>
            <version>${dvalin.version}</version>
        </dependency>-->
        <!--<dependency>
            <groupId>de.taimos</groupId>
            <artifactId>dvalin-dynamodb</artifactId>
            <version>${dvalin.version}</version>
        </dependency>-->
        <!--<dependency>
            <groupId>de.taimos</groupId>
            <artifactId>dvalin-notification-aws</artifactId>
            <version>${dvalin.version}</version>
        </dependency>-->

        <!-- Test dependencies -->
        <dependency>
            <groupId>de.taimos</groupId>
            <artifactId>dvalin-test</artifactId>
            <version>${dvalin.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <prependGroupId>true</prependGroupId>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.22.1</version>
                <configuration>
                    <images>
                        <image>
                            <name>${dockerImage}:v${project.version}</name>
                            <build>
                                <from>openjdk:8-jdk-alpine</from>
                                <maintainer>${project.organization.name}</maintainer>
                                <tags>
                                    <tag>latest</tag>
                                    <tag>v${project.version}</tag>
                                </tags>
                                <ports>
                                    <port>${dockerPort}</port>
                                </ports>
                                <workdir>/opt/daemon</workdir>
                                <cmd>
                                    <exec>
                                        <args>java</args>
                                        <args>-cp</args>
                                        <args>${project.artifactId}.jar:lib/*</args>
                                        <args>-XX:+UnlockExperimentalVMOptions</args>
                                        <args>-XX:+UseCGroupMemoryLimitForHeap</args>
                                        <args>-XX:+ExitOnOutOfMemoryError</args>
                                        <args>-DstartupMode=run</args>
                                        <args>-Djava.net.preferIPv4Stack=true</args>
                                        <args>-Djava.awt.headless=true</args>
                                        <args>${mainClass}</args>
                                    </exec>
                                </cmd>
                                <cleanup>false</cleanup>
                                <assembly>
                                    <basedir>/opt/daemon</basedir>
                                    <inline xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2"
                                            xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 http://maven.apache.org/xsd/assembly-1.1.2.xsd">
                                        <id>docker-assembly</id>
                                        <fileSets>
                                            <fileSet>
                                                <directory>target</directory>
                                                <outputDirectory>/</outputDirectory>
                                                <includes>
                                                    <include>${project.artifactId}.jar</include>
                                                </includes>
                                            </fileSet>
                                            <fileSet>
                                                <directory>target/lib</directory>
                                                <outputDirectory>/lib</outputDirectory>
                                                <includes>
                                                    <include>*.jar</include>
                                                </includes>
                                            </fileSet>
                                        </fileSets>
                                    </inline>
                                </assembly>
                            </build>
                        </image>
                    </images>
                </configuration>
                <executions>
                    <execution>
                        <id>build</id>
                        <phase>package</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>push</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>push</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
